<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <EditTextPreference android:key="user" 
        android:title="@string/userTitle" 
        android:summary="@string/userSum"/>
    <EditTextPreference android:key="pass" 
        android:title="@string/passTitle" 
        android:summary="@string/passSum"
        android:password="true"/>
    <EditTextPreference android:key="url" 
        android:title="@string/urlTitle" 
        android:summary="@string/urlSum"/>
    
    <EditTextPreference android:key="max_chars" 
        android:title="@string/max_presented_chars" 
        android:summary="@string/max_presented_chars_sum" />
    
    <EditTextPreference android:key="max_tweets" 
        android:title="@string/max_presented_tweets" 
        android:summary="@string/max_presented_tweets_sum"/>
    
</PreferenceScreen>